trunk/Archive2/7b/bf02ca8f118b73/output
main.cpp:13:3: error: stray '\315' in program
   x+=2;
   ^
main.cpp:13:3: error: stray '\276' in program
main.cpp: In function 'int main()':
main.cpp:14:2: error: expected ';' before '}' token
  }
  ^
